--- a/smos-docs-site/templates/header.html
+++ b/smos-docs-site/templates/header.html
@@ -11,6 +11,7 @@
           <li><a href="/">Home</a></li>
           <li><a href="/pages/features.html">Features</a></li>
           <li><a href="/pages/building-installation.html">Building/Installation</a></li>
+          <li><a href="/pages/customisation-default.html">Customisation</a></li>
           <li><a href="/pages/customisation-haskell.html">Customisation in Haskell</a></li>
         </ul>
       </nav>
