--- a/smos-docs-site/templates/header.html
+++ b/smos-docs-site/templates/header.html
@@ -19,6 +19,7 @@
         <ul class="page-link">
           <li><a href="/pages/features.html">Features</a></li>
           <li><a href="/pages/building-installation.html">Building/Installation</a></li>
+          <li><a href="/pages/smos-query.html">Using smos-query</a></li>
           <li><a href="/pages/customisation-default.html">Customisation</a></li>
           <li><a href="/pages/customisation-haskell.html">Customisation in Haskell</a></li>
           <hr>
