--- a/smos-docs-site/templates/header.html
+++ b/smos-docs-site/templates/header.html
@@ -23,6 +23,8 @@
           <li><a href="/customisation-default.html">Customisation</a></li>
           <li><a href="/customisation-haskell.html">Customisation in Haskell</a></li>
           <hr>
+          <li><a href="/support.html">Support</a></li>
+          <hr>
           <li>
             <a href="https://github.com/NorfairKing/smos">Smos on Github</a>
           </li>
