Add a mailing list

--- a/smos-docs-site/templates/head.html
+++ b/smos-docs-site/templates/head.html
@@ -12,5 +12,7 @@
   <title>Smos Documentation - $title$</title>
 
   <link rel="stylesheet" href="/css/main.css">
+
+  $partial("templates/mailing-list.html")$
 </head>
 
