Upgraded the docs site

--- a/smos-docs-site/_sass/_layout.scss
+++ b/smos-docs-site/_sass/_layout.scss
@@ -206,7 +206,7 @@ p.readmore {
 
 .article_meta {}
 
-.article-content a {
+/* .article-content a {
     border-bottom: 1px dotted red;
     text-decoration: none;
 }
@@ -214,7 +214,7 @@ p.readmore {
 .article-content a:hover {
     color: red;
     border-bottom: 1px dotted red;
-}
+} */
 
 .article-footer {
     padding: 2rem 0;
