--- a/smos-docs-site/templates/head.html
+++ b/smos-docs-site/templates/head.html
@@ -13,6 +13,12 @@
 
   <link rel="stylesheet" href="/css/main.css">
 
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/styles/default.min.css">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/highlight.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.9/languages/yaml.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.9/languages/json.min.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
+
   $partial("templates/mailing-list.html")$
 </head>
 
