documentation about synchronisation

--- a/smos-docs-site/templates/header.html
+++ b/smos-docs-site/templates/header.html
@@ -22,6 +22,7 @@
           <li><a href="/smos-query.html">Using smos-query</a></li>
           <li><a href="/customisation-default.html">Customisation</a></li>
           <li><a href="/customisation-haskell.html">Customisation in Haskell</a></li>
+          <li><a href="/synchronisation.html">Synchronisation</a></li>
           <li><a href="/blogposts.html">Featured blogposts</a></li>
           <hr>
           <li><a href="/support.html">Support</a></li>
