improves documentations: added skeleton for concepts and config reference

--- a/smos-docs-site/templates/header.html
+++ b/smos-docs-site/templates/header.html
@@ -19,9 +19,11 @@
         <ul class="page-link">
           <li><a href="/features.html">Features</a></li>
           <li><a href="/building-installation.html">Building/Installation</a></li>
+	  <li><a href="/concepts.html">Concepts</a></li>
           <li><a href="/smos-query.html">Using smos-query</a></li>
           <li><a href="/customisation-default.html">Customisation</a></li>
           <li><a href="/customisation-haskell.html">Customisation in Haskell</a></li>
+	  <li><a href="/configuration-reference.html">Configuration reference</a></li>
           <li><a href="/synchronisation.html">Synchronisation</a></li>
           <li><a href="/blogposts.html">Featured blogposts</a></li>
           <hr>
