Adds command reference and keybinding reference pages (autogenerated)
The generated pages are partial to gather feedback about the optimal
solution.

--- a/smos-docs-site/templates/header.html
+++ b/smos-docs-site/templates/header.html
@@ -24,6 +24,8 @@
           <li><a href="/customisation-default.html">Customisation</a></li>
           <li><a href="/customisation-haskell.html">Customisation in Haskell</a></li>
 	  <li><a href="/configuration-reference.html">Configuration reference</a></li>
+	  <li><a href="/commands.html">Commands reference</a></li>
+	  <li><a href="/keybindings.html">Key Bindings</a></li>
           <li><a href="/synchronisation.html">Synchronisation</a></li>
           <li><a href="/blogposts.html">Featured blogposts</a></li>
           <hr>
