--- a/smos-web-style/style/mybulma.scss
+++ b/smos-web-style/style/mybulma.scss
@@ -33,6 +33,7 @@ $box-background-color: $white;
 
 @import "bulma/bulma.sass";
 @import "bulma-carousel/src/sass/index.sass";
+@import "bulma-pricingtable/src/sass/index.sass";
 
 .slider-navigation-previous, .slider-navigation-next {
   box-shadow: 0px 0px;
